--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2e628165bc.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
 </head>
 <body> 
     
     <header class="main-header">
-        <div class="container">
+        <div class="container header">
             <a href="#" class="main-header__a-img"><img class="main-header__img" src="./img/marvel-icon.png"></a>
             <ul class="main-header__ul">
                     <li class="main-header__li"><a href="#" class="main-header__a">Inicio</a></li>
                     <li class="main-header__li"><a href="#personajes" class="main-header__a">Personajes principales</a></li>
                     <li class="main-header__li"><a href="#films" class="main-header__a">Películas</a></li>
             </ul>
-            <a href="#" class="hamb"><i class="fas fa-bars"></i></a>
+            <button class="panel-btn hamburger hamburger--vortex" id="hamb" type="button">
+                <span class="hamburger-box">
+                  <span class="hamburger-inner"></span>
+                </span>
+            </button>
         </div>
     </header>
+
 
     <main> 
         <section id="portada">  
@@ -195,5 +201,7 @@
             
         </div>
     </footer>
+
+<script src="./js/main.js" type="module"></script>
 </body>
 </html>
